JP GENERATION - SOMETHING FIX

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -45,10 +45,8 @@
                     <a href="ser-photo-prod.html">Foto produkcia</a>
                     <a href="ser-video-prod.html">Video produkcia</a>
                     <a href="ser-graph-des.html">Graficky dizajn</a>
-                    <a href="ser-news-lett.html">Newsletter reklama</a>
-                    <a href="ser-admin-dom-hos.html">Správa domeny a hostingu</a>
                     <a href="ser-word-web.html">Wordpres web</a>
-                    <a href="ser-soc-med.html">Sociálne média</a>
+                    <a href="ser-admin-dom-hos.html">Správa domeny a hostingu</a>
                     <a href="ser-dig-stra.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -60,10 +58,8 @@
                     <a href="price-photo-prod.html">Foto produkcia</a>
                     <a href="price-video-prod.html">Video produkcia</a>
                     <a href="price-graph-des.html">Graficky dizajn</a>
-                    <a href="price-news-lett.html">Newsletter reklama</a>
-                    <a href="price-admin-dom-hos.html">Správa domeny a hostingu</a>
                     <a href="price-word-web.html">Wordpres web</a>
-                    <a href="price-soc-med.html">Sociálne média</a>
+                    <a href="price-admin-dom-hos.html">Správa domeny a hostingu</a>
                     <a href="price-dig-stra.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -448,7 +444,7 @@
             <div class="overlay-content">
                 <h2 class="mind">Máte na mysli niečo veľké?</h2>
                 <button class="come-on">
-                    <a class="come" href="#">Poďme na to!</a>
+                    <a class="come" href="contact.html">Poďme na to!</a>
                 </button>
             </div>
         </div>
@@ -461,7 +457,7 @@
     <section class="main">
         <div class="fot-logo-disc">
             <div class="fot-logo">
-                <a href="#">
+                <a href="index.html">
                     <img class="logo-foot" alt="logo jp generation" src="image/logo/asset-8-8.png">
                 </a>
             </div>
@@ -475,19 +471,19 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Foto produkcia</a>
+                    <a href="ser-photo-prod.html">Foto produkcia</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Graficky dizajn</a>
+                    <a href="ser-graph-des.html">Graficky dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Wordpres web</a>
+                    <a href="ser-word-web.html">Wordpres web</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Cenník</a>
+                    <a href="ser-dig-stra.html">Digitálna stratégia</a>
                 </div>
             </div>
         </div>
@@ -496,19 +492,19 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Kto vlastne sme</a>
+                    <a href="about-us.html">Kto vlastne sme</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Portfólio</a>
+                    <a href="fotky.html">Portfólio</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Zásady ochrany osobných údajov</a>
+                    <a href="gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="">Zásady používania súborov cookie</a>
+                    <a href="cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
@@ -521,11 +517,11 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
-                    <a href="#">+421 907 112 358</a>
+                    <a href="tel:0907112358">+421 907 112 358</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="#">info@jpgeneration.sk</a>
+                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
                 </div>
 
             </div>
