JP GENERATION - CONNECTING HREF LINKS

--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>JP GENERATION</title>
-    <link href="image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
+    <link href="../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/media.css" rel="stylesheet">
-    <link href="css/keyframe.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/media.css" rel="stylesheet">
+    <link href="../css/keyframe.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
@@ -20,7 +20,7 @@
     <div class="nav-complet">
         <div class="log-div">
             <a class="logo-jp" href="index.html">
-                <img alt="JP GENERATION logo" id="logo" src="image/logo/asset-8-8.png">
+                <img alt="JP GENERATION logo" id="logo" src="../image/logo/asset-8-8.png">
             </a>
         </div>
         <div class="topnav" id="myTopnav">
@@ -33,8 +33,8 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow1"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="fotky.html">Fotky</a>
-                    <a href="video.html">Video</a>
+                    <a href="portfolio/fotky.html">Fotky</a>
+                    <a href="portfolio/video.html">Video</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -42,12 +42,12 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow2"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="ser-photo-prod.html">Foto produkcia</a>
-                    <a href="ser-video-prod.html">Video produkcia</a>
-                    <a href="ser-graph-des.html">Graficky dizajn</a>
-                    <a href="ser-word-web.html">Wordpres web</a>
-                    <a href="ser-admin-dom-hos.html">Správa domeny a hostingu</a>
-                    <a href="ser-dig-stra.html">Digitálna stratégia</a>
+                    <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
+                    <a href="sluzby/video-produkcia.html">Video produkcia</a>
+                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/wordpress-web.html">Wordpress web</a>
+                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -55,12 +55,12 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow3"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="price-photo-prod.html">Foto produkcia</a>
-                    <a href="price-video-prod.html">Video produkcia</a>
-                    <a href="price-graph-des.html">Graficky dizajn</a>
-                    <a href="price-word-web.html">Wordpres web</a>
-                    <a href="price-admin-dom-hos.html">Správa domeny a hostingu</a>
-                    <a href="price-dig-stra.html">Digitálna stratégia</a>
+                    <a href="cennik/cena-foto-produkcia.html">Foto produkcia</a>
+                    <a href="cennik/cena-video-produkcia.html">Video produkcia</a>
+                    <a href="cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="cennik/cena-wordpress-web.html">Wordpress web</a>
+                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -68,11 +68,11 @@
                     <i aria-hidden="true" class="fa fa-angle-down" id="arrow4"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="about-us.html">Kto vlastne sme</a>
-                    <a href="customers.html">Zákaznici</a>
+                    <a href="o-nas/kto-vlastne-sme.html">Kto vlastne sme</a>
+                    <a href="o-nas/zakaznici.html">Zákazníci</a>
                 </div>
             </div>
-            <a href="contact.html">Kontakt</a>
+            <a href="kontakt/kontakt.html">Kontakt</a>
         </div>
     </div>
 </section>
@@ -83,39 +83,39 @@
         <div class="text2">My sme digitálna generácia</div>
         <!-----------1.-------->
         <div class="mySlides">
-            <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="image/slider/jp-negroni.webp">
+            <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="../image/slider/jp-negroni.webp">
         </div>
         <!-----------2.-------->
         <div class="mySlides">
-            <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/slider/chivaspromo-portfoli.webp">
+            <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="../image/slider/chivaspromo-portfoli.webp">
         </div>
         <!-----------3.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/slider/jp-halloween-portfoli-shot.webp">
+            <img alt="halloween shot cocktail" class="sliderimg" src="../image/slider/jp-halloween-portfoli-shot.webp">
         </div>
         <!-----------4.-------->
         <div class="mySlides">
-            <img alt="halloween martini cocktail" class="sliderimg" src="image/slider/halloween-portfoli.webp">
+            <img alt="halloween martini cocktail" class="sliderimg" src="../image/slider/halloween-portfoli.webp">
         </div>
         <!-----------5.-------->
         <div class="mySlides">
-            <img alt="G&T Malfy cocktail mennu" class="sliderimg" src="image/slider/jp-menu-portfoli-malfy.webp">
+            <img alt="G&T Malfy cocktail mennu" class="sliderimg" src="../image/slider/jp-menu-portfoli-malfy.webp">
         </div>
         <!-----------6.-------->
         <div class="mySlides">
-            <img alt="ENCORE the club cocktail card" class="sliderimg" src="image/slider/jp-graphic.webp">
+            <img alt="ENCORE the club cocktail card" class="sliderimg" src="../image/slider/jp-graphic.webp">
         </div>
         <!-----------7.-------->
         <div class="mySlides">
-            <img alt="Lounge bar peoples" class="sliderimg" src="image/slider/jp-people.webp">
+            <img alt="Lounge bar peoples" class="sliderimg" src="../image/slider/jp-people.webp">
         </div>
         <!-----------8.-------->
         <div class="mySlides">
-            <img alt="Coktail menu QR code design" class="sliderimg" src="image/slider/jp-qrcode.webp">
+            <img alt="Coktail menu QR code design" class="sliderimg" src="../image/slider/jp-qrcode.webp">
         </div>
         <!-----------9.-------->
         <div class="mySlides">
-            <img alt="KVADRAT sushi in lounge bar" class="sliderimg" src="image/slider/jp-shushi.webp">
+            <img alt="KVADRAT sushi in lounge bar" class="sliderimg" src="../image/slider/jp-shushi.webp">
         </div>
     </div>
     <br>
@@ -143,7 +143,7 @@
 <br>
 <section class="new-gen">
     <div class="wrapper">
-        <a class="button-gen" href="contact.html">
+        <a class="button-gen" href="kontakt/kontakt.html">
             <span></span>
             <span></span>
             <span></span>
@@ -250,84 +250,85 @@
         <div class="gallery" id="gallery">
             <!--1-->
             <div class="slide blue">
-                <img class="pro-gal" src="image/project/barpromo-portfoli-02.webp" alt="Cocktail making"/>
+                <img alt="Cocktail making" class="pro-gal" src="../image/project/barpromo-portfoli-02.webp"/>
             </div>
             <!--2-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/barpromo-portfoli-04.webp" alt="Hot rose wine"/>
+                <img alt="Hot rose wine" class="pro-gal" src="../image/project/barpromo-portfoli-04.webp"/>
             </div>
             <!--3-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/barpromo-portfoli-06.webp" alt="Red wine pouring"/>
+                <img alt="Red wine pouring" class="pro-gal" src="../image/project/barpromo-portfoli-06.webp"/>
             </div>
             <!--4-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/brilia-drink-menu.webp" alt="Brilia drink menu"/>
+                <img alt="Brilia drink menu" class="pro-gal" src="../image/project/brilia-drink-menu.webp"/>
             </div>
             <!--5-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/coffeein-portfoli-01.webp" alt="French press coffee"/>
+                <img alt="French press coffee" class="pro-gal" src="../image/project/coffeein-portfoli-01.webp"/>
             </div>
             <!--6-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/coffein-project-cover.webp" alt="Coffein coffee pack"/>
+                <img alt="Coffein coffee pack" class="pro-gal" src="../image/project/coffein-project-cover.webp"/>
             </div>
             <!--7-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/encore-email-dizajn.webp" alt="Encore the club e-mail design"/>
+                <img alt="Encore the club e-mail design" class="pro-gal"
+                     src="../image/project/encore-email-dizajn.webp"/>
             </div>
             <!--8-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/encore-partyalert.webp" alt="Encore the club party poster"/>
+                <img alt="Encore the club party poster" class="pro-gal" src="../image/project/encore-partyalert.webp"/>
             </div>
             <!--9-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/encore-vizitka.webp" alt="Encore the club business card"/>
+                <img alt="Encore the club business card" class="pro-gal" src="../image/project/encore-vizitka.webp"/>
             </div>
             <!--10-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/gtnight-portfoli-01.webp" alt="G&T Beefeater London Dry"/>
+                <img alt="G&T Beefeater London Dry" class="pro-gal" src="../image/project/gtnight-portfoli-01.webp"/>
             </div>
             <!-- this content should be cloned -->
             <!--1-->
             <div class="slide blue">
-                <img class="pro-gal" src="image/project/gtnight-portfoli-03.webp" alt="G&T Malfy Con Arancia"/>
+                <img alt="G&T Malfy Con Arancia" class="pro-gal" src="../image/project/gtnight-portfoli-03.webp"/>
             </div>
             <!--2-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/jp-valentin-6.webp" alt="Valentines day cocktail"/>
+                <img alt="Valentines day cocktail" class="pro-gal" src="../image/project/jp-valentin-6.webp"/>
             </div>
             <!--3-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/kavapromo-portfoli-01.webp" alt="Coffee grider"/>
+                <img alt="Coffee grider" class="pro-gal" src="../image/project/kavapromo-portfoli-01.webp"/>
             </div>
             <!--4-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/kavapromo-portfoli-04.webp" alt="Cappuccino pouring"/>
+                <img alt="Cappuccino pouring" class="pro-gal" src="../image/project/kavapromo-portfoli-04.webp"/>
             </div>
             <!--5-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/napojak-lounge.webp" alt="Encore the club drink menu"/>
+                <img alt="Encore the club drink menu" class="pro-gal" src="../image/project/napojak-lounge.webp"/>
             </div>
             <!--6-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/summerpromo-portfoli-02.webp" alt="Girl smoking shisha"/>
+                <img alt="Girl smoking shisha" class="pro-gal" src="../image/project/summerpromo-portfoli-02.webp"/>
             </div>
             <!--7-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/summerpromo-portfoli-04.webp" alt="Girl eating cake"/>
+                <img alt="Girl eating cake" class="pro-gal" src="../image/project/summerpromo-portfoli-04.webp"/>
             </div>
             <!--8-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/wintermenu2-portfoli-01.webp" alt="Winter menu cocktail"/>
+                <img alt="Winter menu cocktail" class="pro-gal" src="../image/project/wintermenu2-portfoli-01.webp"/>
             </div>
             <!--9-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/wintermenu-portfoli-02.webp" alt="White russian cockatil"/>
+                <img alt="White russian cockatil" class="pro-gal" src="../image/project/wintermenu-portfoli-02.webp"/>
             </div>
             <!--10-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/wintermenu-portfoli-05.webp" alt="Hot red wine"/>
+                <img alt="Hot red wine" class="pro-gal" src="../image/project/wintermenu-portfoli-05.webp"/>
             </div>
             <div class="modal">
                 <span class="close">&times;</span>
@@ -430,7 +431,7 @@
 </section>
 <section class="abbilites-img">
     <div class="skill-img">
-        <img class="gt" src="image/skill/jp-skill-cover.webp" alt="Macbook programing something"/>
+        <img alt="Macbook programing something" class="gt" src="../image/skill/jp-skill-cover.webp"/>
     </div>
 </section>
 </section>
@@ -440,11 +441,11 @@
 <section class="mind-sec">
     <div class="backgr-img">
         <div class="overlay">
-            <img class="overlay-img" src="image/big-mind/jp-big-mind.webp" alt="Overlay Image">
+            <img alt="Overlay Image" class="overlay-img" src="../image/big-mind/jp-big-mind.webp">
             <div class="overlay-content">
                 <h2 class="mind">Máte na mysli niečo veľké?</h2>
                 <button class="come-on">
-                    <a class="come" href="contact.html">Poďme na to!</a>
+                    <a class="come" href="kontakt/kontakt.html">Poďme na to!</a>
                 </button>
             </div>
         </div>
@@ -458,7 +459,7 @@
         <div class="fot-logo-disc">
             <div class="fot-logo">
                 <a href="index.html">
-                    <img class="logo-foot" alt="logo jp generation" src="image/logo/asset-8-8.png">
+                    <img alt="logo jp generation" class="logo-foot" src="../image/logo/asset-8-8.png">
                 </a>
             </div>
             <div class="slog">
@@ -471,19 +472,19 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="ser-photo-prod.html">Foto produkcia</a>
+                    <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="ser-graph-des.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="ser-word-web.html">Wordpres web</a>
+                    <a href="sluzby/wordpress-web.html">Wordpress web</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="ser-dig-stra.html">Digitálna stratégia</a>
+                    <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
         </div>
@@ -492,19 +493,19 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="about-us.html">Kto vlastne sme</a>
+                    <a href="o-nas/kto-vlastne-sme.html">Kto vlastne sme</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="fotky.html">Portfólio</a>
+                    <a href="portfolio/fotky.html">Portfólio</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="gdpr.html">Zásady ochrany osobných údajov</a>
+                    <a href="gdpr/gdpr.html">Zásady ochrany osobných údajov</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="cookie.html">Zásady používania súborov cookie</a>
+                    <a href="cookie/cookie.html">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
@@ -590,29 +591,21 @@
 <br>
 <br>
 <!-------------JAVA SCRIPT-------------->
-<script src="js/slider.js" type="text/javascript"></script>
-<script src="js/nav.js" type="text/javascript"></script>
-<script src="js/dropdown-nav.js" type="text/javascript"></script>
-<script src="js/project-gallery.js" type="text/javascript"></script>
-<script src="js/skill-bar.js" type="text/javascript"></script>
+<script src="../js/slider.js" type="text/javascript"></script>
+<script src="../js/nav.js" type="text/javascript"></script>
+<script src="../js/dropdown-nav.js" type="text/javascript"></script>
+<script src="../js/project-gallery.js" type="text/javascript"></script>
+<script src="../js/skill-bar.js" type="text/javascript"></script>
 </body>
 </html>
 
 <!-------------TO DO-------------->
 <!--TODO animacia navigacneho menu na X-->
 <!--TODO Equal width menu-->
-<!--TODO LOGO ZAROVNAT pri MOBILE na STRED-->
+<!--TODO upravit design pre mobily-->
 <!--TODO Sroll buttom up -->
-<!--TODO Gallery with filer and gallery prewiev and sroll on images popis AKO NA WORDPRESSE-->
-<!--TODO zivotopis sticky fotka  -->
-<!--TODO Skill bar v % s animaciou-->
 <!--TODO Animacia na každu sekciu -->
-<!--TODO kontaktny formular na objednavku -->
-<!--TODO Google maps s funkčnostou -->
 <!--TODO Odber noviniek-->
 <!--TODO Cookies baner -->
 <!--TODO Facebook chat-->
-<!--TODO 404 PAGE NOT FOUND STYLE-->
-<!--TODO Footer s rychlymi odkazmi + logo + social media + copyright-->
-<!--TODO GDPR a COOKIES DAT DO RYCHLE ODKAZY NIE HORE V NAV-->
 <!--TODO 404 PAGE NOT FOUND UROBIŤ-->
