JP GENERATION - CONNECTING HREF LINKS

--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -91,6 +91,12 @@
 </section>
 <br>
 <br>
+<!-------------PORTFOLI FOTO GALERRY-------------->
+<section>
+    
+</section>
+<br>
+<br>
 <!-------------FOOTER-------------->
 <footer>
     <section class="main">
