--- a/skuska-galeria-podla-predstav/index.html
+++ b/skuska-galeria-podla-predstav/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-
+<!-- GALLERY PORTFOLI -->
 <section class="gallery">
     <div class="container">
         <div class="row">
