--- a/skuska-galeria-podla-predstav/index.html
+++ b/skuska-galeria-podla-predstav/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <!-- GALLERY PORTFOLI -->
-<section class="gallery">
-    <div class="container">
+<section class="gallery-port">
+    <div class="container-port">
         <div class="row">
             <div class="gallery-filter">
                 <span class="filter-item active" data-filter="all">Všetky</span>
@@ -179,11 +179,11 @@
 </section>
 
 <!-- Gallery Modal -->
-<div id="galleryModal" class="modal">
+<div id="galleryModal-port" class="modal-port">
     <span class="close" onclick="closeModal()">&times;</span>
     <div class="modal-content">
         <div class="prev" onclick="showPreviousImage()"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
-        <img id="modalImage" alt="">
+        <img id="modalImage-port" alt="">
         <div class="next" onclick="showNextImage()"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
     </div>
 </div>
