JP GENERATION - CONNECTING HREF LINKS

--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -330,7 +330,7 @@
             <div class="slide">
                 <img alt="Hot red wine" class="pro-gal" src="../image/project/wintermenu-portfoli-05.webp"/>
             </div>
-            <div class="modal">
+            <div class="modal-port">
                 <span class="close">&times;</span>
                 <img class="modalImage" id="img01"/>
             </div>
