JP GENERATION - CONNECTING HREF LINKS

--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -111,6 +111,12 @@
                              src="https://i.postimg.cc/7PJ4yYHh/revolt-164-6w-VEHf-I-unsplash.jpg">
                         <div class="image-caption">Shoe</div>
                     </div>
+                    <div class="image-overlay">
+                        <img alt="Foto produkcia" onclick="openModal(this)"
+                             onmouseout="removeHoverEffect(this)" onmouseover="hoverEffect(this)"
+                             src="https://i.postimg.cc/7PJ4yYHh/revolt-164-6w-VEHf-I-unsplash.jpg">
+                        <div class="image-caption">Shoe</div>
+                    </div>
                 </div>
             </div>
             <!-- gallery item end -->
